fixed overflow when resizing browser window I think

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2840,7 +2840,7 @@ video {
 			margin: 0 auto;
 		}
 
-			@media screen and (max-width: 1280px) {
+			@media screen and (max-width: 1500px) {
 
 				.wrapper > .inner {
 					width: 90%;
